syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

package app.softnetwork.payment.api;

option (scalapb.options) = {
    import: "app.softnetwork.protobuf.ScalaPBTypeMappers._"
    preserve_unknown_fields: false
};

service ClientServiceApi {
    rpc GenerateClientTokens (GenerateClientTokensRequest) returns (ClientTokensResponse) {}
    rpc RefreshClientTokens (RefreshClientTokensRequest) returns (ClientTokensResponse) {}
}

message Tokens {
    string access_token = 1;
    string token_type = 2;
    int64 expires_in = 3;
    string refresh_token = 4;
    //    google.protobuf.StringValue scope = 5;
}

message ClientTokensResponse {
    oneof clientTokens {
        Tokens tokens = 1;
        string error = 2;
    }
}

message GenerateClientTokensRequest {
    string client_id = 1;
    string client_secret = 2;
    google.protobuf.StringValue scope = 3;
}

message RefreshClientTokensRequest {
    string refresh_token = 1;
}
